tests/paczka1/small_fuzzy/34401620.err
Error in line 3: jWVmYhf3lq A480 86,7
Error in line 1: 41q S716 44,2
Error in line 8: 41q A598 87,0
Error in line 15: jWVmYhf3lq A598 43,9
